--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
   		<artifactId>java-sdk</artifactId>
   		<version>3.3.0</version>
   	</dependency>
+
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>2.5</version>
+	</dependency>
   	
 	<dependency>
     	<groupId>org.apache.commons</groupId>
