--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	
-	<display-name>Spring Web MVC Hello World Application</display-name>
+	<display-name>Watson API Spring Web MVC Application</display-name>
 	
 	<servlet>
 		<servlet-name>spring</servlet-name>
